--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ text-transform: uppercase;
 
 .link{
     color: #000000fb;
+  
 }
 
 .link:hover{
@@ -71,4 +72,54 @@ ul li{
     font-weight: 200;
     color: rgba(0,0,0,1);
 }
+
+
+.container{
+    position: relative;
+    margin:50px;
+}
+
+
+.container .sales{
+    background-color:rgba(255, 0, 0, 0.992);
+    
+    padding: 10px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+  z-index:5;
+}
+ 
+.colors{
+      margin-top:20px;
+}
+
+.color {
+background-color: #000;
+    width: 22px;
+    height:22px;
+margin-right: 10px;
+   display: inline-block;
+
+}
+.color-blue{
+    background-color:#2f6ee2 ;
+}
+
+
+.color-red{
+    background-color:#ec2f2f ;
+}
+
+.color-yellow{
+    background-color:#f0bf1e ;
+}
+
+.color-green{
+    background-color:#90cc20 ;
+}
+
+.color-brown{
+    background-color:#2ffee2 ;
+}
+
 
